# pybobyqa

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python_testing.yml  upload_pypi.yml
docs/: Makefile  advanced.rst  conf.py  history.rst  index.rst  info.rst  install.rst  make.bat  userguide.rst
examples/: global_opt_demo.py  rosenbrock_ball.py  rosenbrock_basic.py  rosenbrock_bounds.py  rosenbrock_noisy.py
pybobyqa/: __init__.py  controller.py  diagnostic_info.py  hessian.py  model.py  params.py  solver.py  trust_region.py  util.py  version.py
pybobyqa/tests/: test_hessian.py  test_model.py  test_solver.py  test_trust_region.py  test_util.py
